Endringer etter QA